update background and finish up

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="signUp">
         <h2 style="    font-size: 25px !important; font-weight: 600 !important; ">Sign Up Now</h2>
-        <form id="signup-form">
+        <form name="signup" id="signup-form" netlify>
             <div class="signup-section">
                 <div class="signup-left">
                         <label for="email">Email</label>
@@ -68,6 +68,7 @@
             <img src="self_improvement.png">
         </div>
     </div>
+    <img id="bg2" src="BG image2.png">
     <script src="main.js"></script>  <!-- optional -->
 </body>
 </html>
