correct typo and thinner logo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="row">
             <img src="cabin.png">
             <div class="rowText">
-                <h3>We help organizer the co-owner logistics.</h3>
+                <h3>We help organize and simplify co-owner logistics.</h3>
                 <p>Things like payments, taxes, and decisions can all be made and managed through the Coze platform.</p>
             </div>
         </div>
