--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Co-Buying Site</title>
+    <title>coze - Simplify Co-Buying</title>
     <link rel="icon" href="Coze Logo BG.png">
     <link rel="stylesheet" href="styles.css">
 </head>
