add slide-up and better spacing on marquee

--- a/v2.html
+++ b/v2.html
@@ -15,14 +15,14 @@
   </nav>
   
   <section id="section1" class="section-bg flex-center" style="background-color: #DBDBF2;">
-    <h1>Co-buy a property <u>without</u> putting relationships at risk.</h1>
-    <h4>Unlock a new path to financial freedom and homeownership. Protect yourself against broken trust and contracts. </h4>
-    <button id="Button1" class="rounded-button">Request Early Access<img class="arrow" alt="icon" src="arrow_outward_white.png"></button>
+    <h1 class=" slide-up">Co-buy a property <u>without</u> putting relationships at risk.</h1>
+    <h4 class=" slide-up">Unlock a new path to financial freedom and homeownership. Protect yourself against broken trust and contracts. </h4>
+    <button id="Button1" class="rounded-button slide-up">Request Early Access<img class="arrow" alt="icon" src="arrow_outward_white.png"></button>
   </section>
 
   <div class="marquee-container">
-    <div class="marquee">
-        <div class="content">
+    <div class="marquee  slide-up">
+        <div class="content  slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -30,7 +30,7 @@
             <span>Become a Homeowner</span><img src="cottage.png" alt="Icon">
             <span>Access Home Equity</span><img src="cottage.png" alt="Icon">
         </div>
-        <div class="content">
+        <div class="content slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -38,7 +38,7 @@
             <span>Become a Homeowner</span><img src="cottage.png" alt="Icon">
             <span>Access Home Equity</span><img src="cottage.png" alt="Icon">
         </div>
-        <div class="content">
+        <div class="content slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -52,22 +52,22 @@
 
   <section id="section2" class="section-bg flex-center" style="background-color: #21213A; color: white;">
     <div style="display: flex; flex-direction: column; ">
-        <div class="tiles">
-        <img class="image" src="keys_w_border.png" alt="Image">
+        <div class="tiles ">
+        <img class="image slide-up" src="keys_w_border.png" alt="Image">
             <div id="bullets">
-                <h2>Why Co-buy?</h2>
-                <h3><img class="bullet" src="radio_button_checked.png" alt="Icon"> More <b>affordable homes</b>, in locations you want</h3>
-                <h3><img class="bullet" src="radio_button_checked.png" alt="Icon"> <b>Access homeownership</b> before you thought possible</h3>
-                <h3><img class="bullet" src="radio_button_checked.png" alt="Icon"> Live next to <b>people you know</b>, not strangers</h3>
-                <button id="Button1" class="rounded-button lb">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward.png"></button>
+                <h2 class=" slide-up">Why Co-buy?</h2>
+                <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> More <b>affordable homes</b>, in locations you want</h3>
+                <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> <b>Access homeownership</b> before you thought possible</h3>
+                <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> Live next to <b>people you know</b>, not strangers</h3>
+                <button id="Button1" class="rounded-button lb  slide-up">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward.png"></button>
             </div>
         </div>
-        <p class="full-width">The average one-unit home is $552,000, while the average two-unit home is $900,000 - $450,000 per unit.</p>
+        <p class="full-width  slide-up">The average one-unit home is $552,000, while the average two-unit home is $900,000 - $450,000 per unit.</p>
     </div>
   </section>
 
   <section id="section3" class="section-bg flex-center" style="background-color: #FFFFFF;">
-    <div class="faq">
+    <div class="faq  slide-up">
       <h3><strong>Have Questions? We’re here to help</strong></h3>
       <!-- Add the 5 question divs here with plus signs and answers -->
         <div class="faq-question">What is Coze? <span class="plus-sign">+</span></div>
@@ -89,7 +89,7 @@
 </section>
 
 <section id="section4" class="section-bg flex-center" style="background-color: #6968A3;color: white;">
-  <div class="tiles">
+  <div class="tiles  slide-up">
       <div id="bullets">
     <h2>Hear some co-buying success stories.</h2>
     <p>People have been sharing property forever, but it’s always seemed like a scary concept. Follow along to see how co-buying has helped friends and families achieve financial freedom together.</p>
@@ -101,7 +101,7 @@
 
 <div class="marquee-container">
     <div class="marquee">
-        <div class="content">
+        <div class="content  slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -109,7 +109,7 @@
             <span>Become a Homeowner</span><img src="cottage.png" alt="Icon">
             <span>Access Home Equity</span><img src="cottage.png" alt="Icon">
         </div>
-        <div class="content">
+        <div class="content  slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -117,7 +117,7 @@
             <span>Become a Homeowner</span><img src="cottage.png" alt="Icon">
             <span>Access Home Equity</span><img src="cottage.png" alt="Icon">
         </div>
-        <div class="content">
+        <div class="content  slide-up">
             <span>Live Where You Want</span><img src="cottage.png" alt="Icon">
             <span>Financial Freedom</span><img src="cottage.png" alt="Icon">
             <span>Increase your Options</span><img src="cottage.png" alt="Icon">
@@ -130,12 +130,12 @@
   
 
 <footer class="section-bg flex-center" style="background-color: #21213A; color: white;">
-  <div class="footer">
+  <div class="footer  slide-up">
     <h3>Still have questions?</h3>
     <p>Can’t find the answer you’re looking for? Send us a message.</p>
     <button id="Button1" class="rounded-button lb">Contact Us<img class="arrow" alt="icon" src="arrow_outward.png"></button>
     <hr>
-    <div class="footer-text">
+    <div class="footer-text  slide-up">
       <p>coze</p>
       <p>2023 coze. All rights reserved.</p>
     </div>
