--- a/v2.html
+++ b/v2.html
@@ -68,23 +68,48 @@
 
   <section id="section3" class="section-bg flex-center" style="background-color: #FFFFFF;">
     <div class="faq  slide-up">
-      <h3><strong>Have Questions? We’re here to help</strong></h3>
-      <!-- Add the 5 question divs here with plus signs and answers -->
-        <div class="faq-question">What is Coze? <span class="plus-sign">+</span></div>
-        <div class="faq-answer" style="display: none;">Here's the answer.</div>
-        <hr>
-        <div class="faq-question">How does it work? <span class="plus-sign">+</span></div>
-        <div class="faq-answer" style="display: none;">Here's the answer.</div>
-        <hr>
-        <div class="faq-question">What do I need to get started? <span class="plus-sign">+</span></div>
-        <div class="faq-answer" style="display: none;">Here's the answer.</div>
-        <hr>
-        <div class="faq-question">How will I know when Coze goes live? <span class="plus-sign">+</span></div>
-        <div class="faq-answer" style="display: none;">Here's the answer.</div>
-        <hr>
-        <div class="faq-question">What does it cost? <span class="plus-sign">+</span></div>
-        <div class="faq-answer" style="display: none;">Here's the answer.</div>
-        <hr>
+      <h3 class="flex-center"><strong>Have Questions? We’re here to help</strong></h3>
+
+<!-- What is Coze? -->
+<div class="faq-question">What is Coze? <span class="plus-sign">+</span></div>
+<div class="faq-answer">Coze is a cutting-edge platform designed to simplify the home-buying process by connecting like-minded individuals interested in co-buying properties. Through seamless collaboration and a suite of tools, Coze helps users find the right property, match with compatible co-buyers, and navigate the legal and financial aspects of co-ownership.</div>
+<hr>
+
+<!-- How does it work? -->
+<div class="faq-question">How does it work? <span class="plus-sign">+</span></div>
+<div class="faq-answer" >Coze helps you and your co-buyers every step of the way, from creating an entity all the way to closing the purchase and beyond.
+  <ol>
+    <li>Create a Profile: Sign up and create a personalized profile, detailing your preferences, budget, and location.</li>
+    <li>Find a Match: Browse through listings and match with like-minded individuals interested in co-buying a property.</li>
+    <li>Choose a Property: Search and select properties that fit your criteria.</li>
+    <li>Legal and Financial Guidance: Coze provides the necessary support, from drafting co-ownership agreements to securing financing, to make the process as smooth as possible.</li>
+    <li>Complete the Purchase: Finalize the purchase with the help of Coze's expert support team.</li>
+  </ol>
+</div>
+<hr>
+
+<!-- What do I need to get started? -->
+<div class="faq-question">What do I need to get started? <span class="plus-sign">+</span></div>
+<div class="faq-answer" >To get started with Coze, you'll need:
+  <ul>
+    <li>An active email address for registration.</li>
+    <li>A clear understanding of your budget and property preferences.</li>
+    <li>Relevant financial information if you choose to apply for financing through Coze.</li>
+    <li>A willingness to collaborate and communicate with potential co-buyers.</li>
+  </ul>
+</div>
+<hr>
+
+<!-- How will I know when Coze goes live? -->
+<div class="faq-question">How will I know when Coze goes live? <span class="plus-sign">+</span></div>
+<div class="faq-answer" >You can sign up for our newsletter or follow us on our social media channels to stay updated on Coze's official launch. By joining our waitlist, you'll be among the first to know when Coze goes live and will have exclusive access to early-bird offers.</div>
+<hr>
+
+<!-- What does it cost? -->
+<div class="faq-question">What does it cost? <span class="plus-sign">+</span></div>
+<div class="faq-answer" >Coze offers a range of pricing options to fit various needs. Basic access to the platform and matching services might be free, while premium features such as legal assistance, personalized support, or enhanced listing visibility could be available at different subscription tiers or one-time fees. For detailed information on pricing, please visit our pricing page or contact our support team.</div>
+<hr>
+
     </div>
 </section>
 
