button links to airtable form. remove copy about matchmaking

--- a/v2.html
+++ b/v2.html
@@ -11,13 +11,14 @@
 <body>
   <nav class="sticky-nav">
     <span style="font-size: 30px; font-weight: 100; letter-spacing: 3px;"><span style="font-weight: 300">coze</span> - simplify co-buying</span>
-    <button id="Button1" class="rounded-button">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward_white.png"></button>
+    <a href="https://airtable.com/appWzB5Ddzf6V2Hch/shruwvn1nDgqhdYms" target="_blank" class="rounded-button no-underline">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward_white.png"></a>
   </nav>
   
   <section id="section1" class="section-bg flex-center" style="background-color: #DBDBF2;">
     <h1 class=" slide-up">Co-buy a property <u>without</u> putting relationships at risk.</h1>
     <h4 class=" slide-up">Unlock a new path to financial freedom and homeownership. Protect yourself against broken trust and contracts. </h4>
-    <button id="Button1" class="rounded-button slide-up">Request Early Access<img class="arrow" alt="icon" src="arrow_outward_white.png"></button>
+    <a id="Button1" class="rounded-button slide-up no-underline" href="https://airtable.com/appWzB5Ddzf6V2Hch/shruwvn1nDgqhdYms" target="_blank">Request Early Access<img class="arrow" alt="icon" src="arrow_outward_white.png"></a>
+  </section>
   </section>
 
   <div class="marquee-container">
@@ -59,7 +60,7 @@
                 <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> More <b>affordable homes</b>, in locations you want</h3>
                 <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> <b>Access homeownership</b> before you thought possible</h3>
                 <h3 class=" slide-up"><img class="bullet" src="radio_button_checked.png" alt="Icon"> Live next to <b>people you know</b>, not strangers</h3>
-                <button id="Button1" class="rounded-button lb  slide-up">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward.png"></button>
+                <a id="Button1" class="rounded-button lb slide-up no-underline" href="https://airtable.com/appWzB5Ddzf6V2Hch/shruwvn1nDgqhdYms" target="_blank">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward.png"></a>
             </div>
         </div>
         <p class="full-width  slide-up">The average one-unit home is $552,000, while the average two-unit home is $900,000 - $450,000 per unit.</p>
@@ -72,19 +73,21 @@
 
 <!-- What is Coze? -->
 <div class="faq-question">What is Coze? <span class="plus-sign">+</span></div>
-<div class="faq-answer">Coze is a cutting-edge platform designed to simplify the home-buying process by connecting like-minded individuals interested in co-buying properties. Through seamless collaboration and a suite of tools, Coze helps users find the right property, match with compatible co-buyers, and navigate the legal and financial aspects of co-ownership.</div>
+<div class="faq-answer">Coze is a platform designed to simplify the home-buying process for groups interested in co-buying properties. Through seamless collaboration and a suite of tools, Coze helps users find the right property, match with compatible lenders, and navigate the legal and financial aspects of co-ownership.</div>
 <hr>
 
 <!-- How does it work? -->
 <div class="faq-question">How does it work? <span class="plus-sign">+</span></div>
 <div class="faq-answer" >Coze helps you and your co-buyers every step of the way, from creating an entity all the way to closing the purchase and beyond.
   <ol>
-    <li>Create a Profile: Sign up and create a personalized profile, detailing your preferences, budget, and location.</li>
-    <li>Find a Match: Browse through listings and match with like-minded individuals interested in co-buying a property.</li>
-    <li>Choose a Property: Search and select properties that fit your criteria.</li>
-    <li>Legal and Financial Guidance: Coze provides the necessary support, from drafting co-ownership agreements to securing financing, to make the process as smooth as possible.</li>
-    <li>Complete the Purchase: Finalize the purchase with the help of Coze's expert support team.</li>
-  </ol>
+    <li>Organize Your Group: Gather your group of co-buyers, ensuring that everyone is familiar with each other and aligned with the co-buying objectives.</li>
+    <li>Form a Legal Entity: Coze assists your group in forming the appropriate legal entity, crafting contracts that reflect the unique needs and agreements of the group.</li>
+    <li>Find a Property: Utilize Coze's resources to find a property that fits the needs and preferences of your group.</li>
+    <li>Negotiate Financing: Coze helps your group find and negotiate with the right lender, ensuring favorable terms that align with your co-buying plan.</li>
+    <li>Complete the Purchase: Finalize the purchase with the help of Coze's expert support team, knowing that all legal and financial aspects are handled with care.</li>
+    <li>Manage Co-Ownership: Coze provides ongoing support for managing the co-owning relationship, handling logistics and offering tools for smooth collaboration among co-owners.</li>
+</ol>
+
 </div>
 <hr>
 
@@ -118,7 +121,7 @@
       <div id="bullets">
     <h2>Hear some co-buying success stories.</h2>
     <p>People have been sharing property forever, but it’s always seemed like a scary concept. Follow along to see how co-buying has helped friends and families achieve financial freedom together.</p>
-    <button id="Button1" class="rounded-button">Join Waitlist<img class="arrow" alt="icon" src="arrow_outward_white.png"></button>
+    <a href="https://airtable.com/appWzB5Ddzf6V2Hch/shruwvn1nDgqhdYms" target="_blank" class="rounded-button no-underline">Join Our Newsletter<img class="arrow" alt="icon" src="arrow_outward_white.png"></a>
 </div>
     <img class="image" src="homes_w_border.png" alt="Image">
   </div>
@@ -158,7 +161,7 @@
   <div class="footer  slide-up">
     <h3>Still have questions?</h3>
     <p>Can’t find the answer you’re looking for? Send us a message.</p>
-    <button id="Button1" class="rounded-button lb">Contact Us<img class="arrow" alt="icon" src="arrow_outward.png"></button>
+    <a href="mailto:amgansari@gmail.com" class="rounded-button lb no-underline">Contact Us<img class="arrow" alt="icon" src="arrow_outward.png"></a>
     <hr>
     <div class="footer-text  slide-up">
       <p>coze</p>
